--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>進捗掲示板 - KaziKi</title>
+  <title>掲示板 - KaziKi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,12 +14,11 @@
 
   <aside class="sidebar">
     <div class="sidebar-header">
-      <h2>製作者情報</h2>
+      <h2>KKの掲示板</h2>
       <button id="darkModeToggle">ダークモード切替</button>
     </div>
     <div class="sidebar-content">
-      <p>KaziKi-github</p>
-      <p><a href="https://github.com/Kazi-Ki" target="_blank" rel="noopener">GitHub</a></p>
+      <p><a href="https://github.com/Kazi-Ki" target="_blank" rel="noopener">GitHubページ</a></p>
       <p><a href="https://kazi-ki.github.io/repos.html">リポジトリ一覧ページ</a></p>
     </div>
   </aside>
@@ -27,15 +26,11 @@
   <main class="main-content">
     <div class="card">
       <h3>進捗 2025-07-06</h3>
-      <p>新しい掲示板UIを作成中。<br>ダークモード対応とレスポンシブ対応も実装。</p>
+      <p>本掲示板を作成。<br>作ったページについて紹介する予定です</p>
     </div>
     <div class="card">
-      <h3>進捗 2025-07-05</h3>
-      <p>サイドバーの開閉機能を完成。<br>製作者情報も追加。</p>
-    </div>
-    <div class="card">
-      <h3>進捗 2025-07-04</h3>
-      <p>ページレイアウトのベースを作成。<br>Google風UIを意識した配色。</p>
+      <h3>進捗 2025-07-07</h3>
+      <p>リポジトリを自動反映するシステムを完成。<br>これでリアルタイムにページに行ける。</p>
     </div>
   </main>
 
