--- a/repos.html
+++ b/repos.html
@@ -14,12 +14,11 @@
 
   <aside class="sidebar">
     <div class="sidebar-header">
-      <h2>製作者情報</h2>
+      <h2>KKの掲示板</h2>
       <button id="darkModeToggle">ダークモード切替</button>
     </div>
     <div class="sidebar-content">
-      <p>KaziKi-github</p>
-      <p><a href="https://github.com/Kazi-Ki" target="_blank" rel="noopener">GitHub</a></p>
+      <p><a href="https://github.com/Kazi-Ki" target="_blank" rel="noopener">GitHubページ</a></p>
       <p><a href="index.html">トップページ</a></p>
     </div>
   </aside>
